---
source: src/analysis/infer/tests.rs
expression: "test_helper(\"let x = 42\")"
---
Root {
    decls: [
        Decl {
            kind: Let(
                Pattern {
                    kind: Ident(
                        ScopedIdent {
                            id: @38,
                            key: InternedString(x),
                            span: 4..5,
                        },
                    ),
                    ty: Int,
                    span: 4..5,
                },
                Expr {
                    kind: Lit(
                        Int(42),
                    ),
                    ty: Int,
                    span: 8..10,
                },
            ),
            ty: Int,
            span: 0..10,
        },
    ],
    span: 0..10,
}
